--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,8 +5,8 @@
   |============================
 */
 @import url('./reset.css');
-@import url('./vite-promo.css');
-@import url('./header.css');
+@import url('./slimselect.css');
+@import url('./loader.css');
 
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
@@ -22,4 +22,61 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+
+.container{
+  padding: 25px;
+}
+
+.breedSelect{
+  max-width: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.content {
+  margin-top: 25px;
+  display: flex;
+  border: 1px solid black;
+  justify-content: center;
+  align-items: center;
+}
+
+.image {
+  flex: 1;
+  width: 250px;
+  object-fit: cover;
+  border-right: 1px solid black;
+}
+
+.info {
+  
+  padding: 5px 15px;
+
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.name {
+  font-size: 27px;
+  font-weight: 900;
+}
+
+.description {
+  font-size: 19px;
+}
+
+.temperaments {
+  font-size: 17px;
+}
+
+.error {
+  font-size: 20px;
+  color: rgb(168, 60, 60);
+  background-color: #e7967d;
+  padding: 5px;
+  text-align: center;
 }
